# libdedx

./: .buildinfo  .clang-format  .clang-tidy  .codecov.yml  .gitignore  .gitpod.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  INSTALL  NEWS  README  README.md  TODO  description.html  description.rst  genindex.html  index.html  index.rst  objects.inv  oldCMakeLists.txt  search.html  searchindex.js  uncrustify.cfg
.doctrees/: description.doctree  environment.pickle  index.doctree
.github/: .gitpod.yml  dependabot.yml
.github/workflows/: build-android.yml  build-linux-packages.yml  build-windows.yml  ci.yml  clang-format.yml  clang-tidy.yml  coverage.yml  docs.yml  python.yml
Windows/: dedx.h  dedx_tools.h  dedx_ws.h
_sources/: index.rst.txt
atima/buildbins/: dedx_build_bin.c
atima/examples/: dedx_bethe.c  dedx_get_parallel.c  dedx_simple.c
atima/examples/scripting/: invoke_func.c  invoke_func.h
atima/gui/: mainframe.cpp
atima/libdedx/: dedx_bethe_struct.h  dedx_calculate_charge.h  dedx_file_access.c  dedx_file_access.h  dedx_stopping_data.h  dedx_tools.c
atima/test/: loadTest.c  test.c
buildbins/: CMakeLists.txt  dedx_build_bin.c
cmake/: dedxConfig.cmake.in  package-description.txt
data/: README.md
data/raw/: icru_90_raw.txt
docs/doxygen/: Doxyfile  README.md
docs/source/: conf.py  index.rst  requirements.txt
estar/: CMakeLists.txt  NEWS  TODO
estar/Windows/: dedx.h  dedx_tools.h  dedx_ws.h
estar/Windows/data/: compos.txt  composition
estar/examples/: CMakeLists.txt  dedx_bethe.c  dedx_csda.c  dedx_example.c  dedx_get.c  dedx_list.c
estar/examples/scripting/: libConf  main.c  makefile
estar/gui/: main  mainMenu.h
estar/gui/dropdown/: prog.cpp  prog.h  target.cpp  target.h
estar/libdedx/: CMakeLists.txt  dedx_atima.c  dedx_bethe.h  dedx_calculate_charge.c  dedx_const.h  dedx_file_access.c  dedx_file_access.h  dedx_mpaul.c  dedx_mstar.h  dedx_periodic_table.c  dedx_periodic_table.h  dedx_spline.c  dedx_spline.h  dedx_spline_base.h  dedx_split.c  dedx_tools.h
estar/libdedx/data/: atima_compos  compos.txt
estar/libdedx/tools/: dedx_math.c  dedx_math.h
estar/test/: test.c
estar/trunk/: INSTALL  README
estar/trunk/gui/: main.cpp  mainMenu.cpp  mainframe.h
estar/trunk/libdedx/: CMakeLists.txt  dedx.c  dedx_atima.h  dedx_bethe.c  dedx_bethe_struct.h  dedx_config.h.in  dedx_file.c  dedx_file.h  dedx_file_access.c  (+9 more)
examples/: CMakeLists.txt  dedx_bench_lookup.c  dedx_bethe.c  dedx_csda.c  dedx_example.c  dedx_get.c  dedx_get_sample_csv.c  dedx_get_simple_stp_with_program.c  dedx_get_stp_table.c  dedx_list.c  dedx_use_wrappers.c
examples/dedx2trip/: README  adapt.c  adapt.h  dedx2trip_new.c  dedx2trip_new.h  makefile  range.c  range.h
examples/scripting/: invoke_func.c  invoke_func.h  main.c  makefile
gui/: Makefile  main.cpp  mainMenu.cpp  mainMenu.h  mainframe.cpp  mainframe.h
gui/dropdown/: prog.cpp  prog.h  target.cpp  target.h
include/: dedx.h  dedx_elements.h  dedx_error.h  dedx_tools.h  dedx_wrappers.h
libdedx/: CMakeLists.txt  dEdx.depend  dEdx.layout  dedx.c  dedx.h  dedx_atima.c  dedx_atima.h  dedx_bethe.c  dedx_bethe.h  dedx_bethe_struct.h  dedx_calculate_charge.c  dedx_calculate_charge.h  dedx_config.h  dedx_config.h.in  dedx_const.h  dedx_data_access.c  dedx_data_access.h  dedx_elements.h  dedx_embedded_data.c  dedx_embedded_data.h  dedx_embedded_metadata.c  dedx_error.h  dedx_file.c  dedx_file.h  dedx_file_access.c  dedx_file_access.h  dedx_gold_struct.h  dedx_lookup_accelerator.h  dedx_lookup_data.h  dedx_mpaul.c  dedx_mpaul.h  dedx_mstar.c  dedx_mstar.h  dedx_periodic_table.c  dedx_periodic_table.h  dedx_program_const.h  dedx_spline.c  dedx_spline.h  dedx_spline_base.h  dedx_split.c  (+9 more)
libdedx/data/: README.md  compos.txt  composition  dat2c.py  dedx_astar.h  dedx_bethe.h  dedx_composition.h  dedx_estar.h  dedx_icru73.h  dedx_icru73new.h  dedx_icru90_C.h  dedx_icru90_a.h  dedx_icru90_e.h  dedx_icru90_p.h  dedx_icru90_pos.h  dedx_icru_90.h  dedx_icru_astar.h  dedx_icru_pstar.h  dedx_metadata.h  dedx_mstar.h  dedx_pstar.h  hgen.py  icru90_dEdx_el.csv  pdf2dat.py
libdedx/data/embedded/: dedx_astar.h  dedx_bethe.h  dedx_composition.h  dedx_estar.h  dedx_icru73.h  dedx_icru73new.h  dedx_icru90_C.h  dedx_icru90_a.h  dedx_icru90_e.h  dedx_icru90_p.h  dedx_icru90_pos.h  dedx_icru_astar.h  dedx_icru_pstar.h  dedx_mstar.h  dedx_pstar.h
libdedx/data/tools/: dat2c.py  pdf2dat.py
libdedx/tools/: dedx_math.c  dedx_math.h
libdedx/tools/dedx2trip/: dedx2trip_new.c  makefile  range.h
python/: CMakeLists.txt  README  README.md  libdedx.c  libdedx.py  libdedx.pyi  pyproject.toml  setup.py  test.py
python/libdedx/: __init__.py  __init__.pyi  _api.py
python/tests/: conftest.py  test_libdedx.py
source/: conf.py  index.rst
src/: CMakeLists.txt  dedx.c  dedx_bethe.c  dedx_bethe.h  dedx_bethe_struct.h  dedx_data_access.c  dedx_data_access.h  dedx_embedded_data.c  dedx_embedded_data.h  dedx_embedded_metadata.c  dedx_embedded_metadata.h  dedx_lookup_accelerator.h  dedx_lookup_data.h  dedx_mpaul.c  dedx_mpaul.h  dedx_mstar.c  dedx_periodic_table.c  dedx_periodic_table.h  dedx_program_const.h  dedx_spline.c  dedx_spline.h  dedx_spline_base.h  dedx_stopping_data.h  dedx_validate.c  dedx_wrappers.c
src/data/embedded/: dedx_astar.h  dedx_bethe.h  dedx_estar.h  dedx_icru73.h  dedx_icru73new.h  dedx_icru90_C.h  dedx_icru90_a.h  dedx_icru90_e.h  dedx_icru90_p.h  dedx_icru90_pos.h  dedx_icru_astar.h  dedx_icru_pstar.h  dedx_metadata.h  dedx_mstar.h  dedx_pstar.h
test/: CMakeLists.txt  loadTest.c  reference_testvals_libdedx.ods  test.c
testing/: dedx_build_bin.c
tests/: CMakeLists.txt  install_consumer.c  install_smoke_test.cmake  test_astar.c  test_bethe_ext00.c  test_core_api.c  test_error_codes.c  test_helpers.h  test_icru.c  test_icru49.c  test_icru73.c  test_icru73_old.c  test_icru90.c  test_initialize.c  test_interpolation.c  test_load_configs.c  test_mstar.c  test_pstar.c  test_tools.c  test_validate_internal.c  test_version.c
tests/install_consumer_cmake/: CMakeLists.txt
tools/: dat2c.py  pdf2dat.py
(+3 files in other folders)
